@@ -133,7 +133,7 @@ class IdleFarmlandServiceTest {
         // then
         assertThat(result).isNotNull();
         assertThat(result.getContent()).hasSize(1);
-        assertThat(result.getContent().get(0).getTitle()).isEqualTo("제주시 애월읍 농지");
+        assertThat(result.getContent().getFirst().getTitle()).isEqualTo("제주시 애월읍 농지");
         verify(idleFarmlandRepository).findByStatus(
                 IdleFarmland.FarmlandStatus.AVAILABLE, pageable);
     }
@@ -163,9 +163,9 @@ class IdleFarmlandServiceTest {
         given(idleFarmlandRepository.findById(farmlandId)).willReturn(Optional.empty());
 
         // when & then
-        assertThrows(RuntimeException.class, () -> {
-            idleFarmlandService.getIdleFarmland(farmlandId);
-        });
+        assertThrows(RuntimeException.class, () ->
+            idleFarmlandService.getIdleFarmland(farmlandId)
+        );
     }
 
     @Test
@@ -218,9 +218,9 @@ class IdleFarmlandServiceTest {
         given(userService.getCurrentUser(anyString())).willReturn(otherUser);
 
         // when & then
-        assertThrows(RuntimeException.class, () -> {
-            idleFarmlandService.updateIdleFarmland(farmlandId, idleFarmlandRequest, userDetails);
-        });
+        assertThrows(RuntimeException.class, () ->
+            idleFarmlandService.updateIdleFarmland(farmlandId, idleFarmlandRequest, userDetails)
+        );
     }
 
     @Test
@@ -275,7 +275,7 @@ class IdleFarmlandServiceTest {
         // then
         assertThat(result).isNotNull();
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getTitle()).isEqualTo("제주시 애월읍 농지");
+        assertThat(result.getFirst().getTitle()).isEqualTo("제주시 애월읍 농지");
         verify(idleFarmlandRepository).findByOwner(user);
     }
 
@@ -292,9 +292,9 @@ class IdleFarmlandServiceTest {
         // then
         assertThat(result).isNotNull();
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getTitle()).isEqualTo("제주시 애월읍 농지");
-        assertThat(result.get(0).getLatitude()).isEqualTo(BigDecimal.valueOf(33.459722));
-        assertThat(result.get(0).getLongitude()).isEqualTo(BigDecimal.valueOf(126.331389));
+        assertThat(result.getFirst().getTitle()).isEqualTo("제주시 애월읍 농지");
+        assertThat(result.getFirst().getLatitude()).isEqualTo(BigDecimal.valueOf(33.459722));
+        assertThat(result.getFirst().getLongitude()).isEqualTo(BigDecimal.valueOf(126.331389));
         verify(idleFarmlandRepository).findByStatusOrderByCreatedAtDesc(
                 IdleFarmland.FarmlandStatus.AVAILABLE);
     }
@@ -313,7 +313,7 @@ class IdleFarmlandServiceTest {
         // then
         assertThat(result).isNotNull();
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getTitle()).isEqualTo("제주시 애월읍 농지");
+        assertThat(result.getFirst().getTitle()).isEqualTo("제주시 애월읍 농지");
         verify(idleFarmlandRepository).findByAddressContainingAndStatusOrderByCreatedAtDesc(
                 region, IdleFarmland.FarmlandStatus.AVAILABLE);
     }
@@ -341,7 +341,7 @@ class IdleFarmlandServiceTest {
         // then
         assertThat(result).isNotNull();
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getTitle()).isEqualTo("제주시 애월읍 농지");
+        assertThat(result.getFirst().getTitle()).isEqualTo("제주시 애월읍 농지");
         verify(idleFarmlandRepository).findByAddressContainingAndUsageTypeAndSoilTypeAndAreaBetweenAndRentPriceBetweenAndStatusOrderByCreatedAtDesc(
                 address, usageType, soilType, minArea, maxArea, minRent, maxRent, IdleFarmland.FarmlandStatus.AVAILABLE);
     }
